--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="O sabor da arte em cada pedaço.">
-    <meta name="keywords" content="Feriani, chocolate, sabor, saboroso, ao leite, chocolate ao leite">
-    <title>Feriani | Chocolates</title>
+    <meta name="description" content="Estilo, conforto e qualidade que vestem a sua personalidade">
+    <meta name="keywords" content="descubra nossas peças e transforme seu guarda-roupa!">
+    <title> Oliveira Roupas </title>
 
     <!-- CSS Bootstrap -->
     
@@ -43,7 +43,7 @@
             <div class="perfil">
                 <img src="img/logo1.png" class="img-fluid rounded-circle">
 
-                <h1 class="text-light"> Feriani Chocolates </h1>
+                <h1 class="text-light"> Oliveira Roupas </h1>
 
                 <div class="social-links mt-3 text-center">
                     <a href="#" class="twitter" target="_blank">
@@ -112,6 +112,67 @@
 
         </div>
     </header>
+
+    <!-- HERO -->
+    <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+
+        <div class="hero-container">
+
+            <h2>Oliveira Roupas</h2>
+            <p> Loja de Roupas
+                <span> Calças, Saias, Shorts, Blusas de Frio, Crppeds
+
+                </span>
+
+            </p>
+
+
+        </div>
+
+    </section>
+    <!--fim Hero -->
+
+    <main id="main">
+
+        <section id="sobre" class="sobre">
+
+         </section>
+
+         <!-- Conquistas -->
+         <section id="conquistas" class="conquistas">
+
+         </section>
+
+         <!--Habilidades / Top Produtos Vendidos -->
+         <section id="skills" class="skills">
+
+         </section>
+
+         <!-- Portfolio -->
+         <section id="portfolio" class="portfolio">
+
+         </section>
+
+         <!-- Serviços ou Outros Produtos -->
+         <section id="services" class="services">
+
+         </section>
+         <!-- Avaliações dos amigos -->
+
+         <section id="depoimentos" class="depoimentos">
+
+         </section>
+
+         <!-- Formulario -->
+         <section id="contato" class="contato">
+
+         </section>
+
+    </main>
+
+    <footer id="footer">
+
+    </footer>
 
 
 
