--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -41,7 +42,7 @@
         <div class="d-flex flex-column"> 
 
             <div class="perfil">
-                <img src="img/logo1.png" class="img-fluid rounded-circle">
+                <img src="img/logo2.png" class="img-fluid rounded-circle">
 
                 <h1 class="text-light"> Oliveira Roupas </h1>
 
@@ -120,9 +121,7 @@
 
             <h2>Oliveira Roupas</h2>
             <p> Loja de Roupas
-                <span> Calças, Saias, Shorts, Blusas de Frio, Crppeds
-
-                </span>
+                <span class="typed" data-typed-items="Calças, Saias, Shorts, Blusas de Frio, Croppeds"></span>
 
             </p>
 
@@ -134,7 +133,16 @@
 
     <main id="main">
 
+        <!-- Sobre -->
         <section id="sobre" class="sobre">
+
+            <div class="container">
+
+                <div class="section-tittle">
+                    <h2>Sobre Nós</h2>
+                </div>
+
+            </div>
 
          </section>
 
@@ -148,7 +156,7 @@
 
          </section>
 
-         <!-- Portfolio -->
+         <!-- Portfolio / Galeria -->
          <section id="portfolio" class="portfolio">
 
          </section>
