--- a/index.html
+++ b/index.html
@@ -170,19 +170,19 @@
                             <div class="col-lg-6">
                                 <ul>
                                     <li>
-                                        <i class="bi bi-calender-date"> </i>
+                                        <i class="bi bi-calendar-date"> </i>
                                         <strong>Inauguração</strong>
                                         <span> 15/04/2025 </span>
                                     </li>
 
                                     <li>
-                                        <i class="bi bi-calender-date"> </i>
+                                        <i class="bi bi-instagram"> </i>
                                         <strong>Instagram</strong>
                                         <span> @oliveiraroupas_ </span>
                                     </li>
 
                                     <li>
-                                        <i class="bi bi-calender-date"> </i>
+                                        <i class="bi bi-whatsapp"> </i>
                                         <strong>WhatsApp</strong>
                                         <span> 11 97870-2559 </span>
                                     </li>
@@ -192,7 +192,7 @@
                             <div class="col-lg-6">
                                 <ul>
                                     <li>
-                                        <i class="bi bi-calender-date"> </i>
+                                        <i class="bi bi-geo-alt-fill"> </i>
                                         <strong>local:</strong>
                                         <span>São Paulo</span>
                                     </li>
@@ -206,7 +206,7 @@
                                     <li>
                                         <i class="bi bi-envelope"> </i>
                                         <strong>Email:</strong>
-                                        <span>juliaoliver1106@gmail.com</span>
+                                        <span>juliaoliver1105@gmail.com</span>
                                     </li>
                                 </ul>
                             </div>
