--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
             <div class="container">
 
-                <div class="section-tittle">
+                <div class="section-title">
                     <h2>Sobre Nós</h2>
                     <p>
                         Nossa loja de roupas oferece uma seleção variada de peças para todas as ocasiões, unindo estilo
