--- a/index.html
+++ b/index.html
@@ -230,6 +230,30 @@
         <!-- Conquistas -->
         <section id="conquistas" class="conquistas">
 
+            <div class="container">
+                <div class="section-title">
+                    <h2>Conquistas</h2>
+                    <p>A Oliveira Roupas se orgulha de vestir todos os estilos e idades, oferecendo variedade, qualidade e um atendimento que faz a diferença. Ao longo da nossa jornada, conquistamos a confiança de muitos clientes, ampliamos nossa presença no mercado, firmamos parcerias sólidas e lançamos coleções exclusivas. Cada conquista reflete nosso compromisso em entregar moda com estilo, preço justo e carinho em cada detalhe!</p>
+                </div>
+
+                <div class="row">
+                   
+                    <!-- 1 -->
+                    <article class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
+                        Teste 1
+                    </article>
+                    <article class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
+                        Teste 1
+                    </article>
+                    <article class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
+                        Teste 1
+                    </article>
+                    <article class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
+                        Teste 1
+                    </article>
+                </div>
+            </div>
+
         </section>
 
         <!--Habilidades / Top Produtos Vendidos -->
