--- a/index.html
+++ b/index.html
@@ -401,7 +401,33 @@
 
                     <h2> Nossas Roupas </h2>
 
-                    <p> </p>
+                    <p> Minha loja é online e vende todos os tipos de roupas para todos os públicos. O catálogo é organizado por categorias como roupas femininas, masculinas, infantis, fitness, plus size, moda praia, íntima e acessórios. Também oferecemos peças separadas por ocasiões: casual, trabalho, festa, esportiva e conforto para casa.
+
+Buscamos atender a todos os estilos com peças básicas, tendências da estação e looks completos. As fotos são feitas com modelos diversos e as descrições incluem informações úteis como tecido, caimento e ocasiões ideais para o uso. </p>
+
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-12 d-flex justify-content-center">
+
+                        <ul id="portfolio-filters">
+                            <li data-filter="*"> Todos </li>
+                            <li data-filter=".filter-vendidos"> Mais Vendidos </li>
+                            <li data-filter=".filter-desconto"> Peças com Desconto </li>
+                            <li data-filter=".filter-Novidades">  Novidades da Semana </li>  
+                        </ul>
+                    </div>
+
+                </div> <!-- Fim Filtros -->
+
+                <div class="row portfolio-container">
+
+                    <!-- Foto 1 -->
+                     <article class="col-lg-4 col-md-6 portfolio-item filter-Novidades">
+
+                        Produto 1
+
+                     </article>
 
                 </div>
 
@@ -424,10 +450,6 @@
 
             </div>
             </article>
-
-
-
-
 
             </div>
             </div>
@@ -464,9 +486,6 @@
     <footer id="footer">
 
     </footer>
-
-
-
 
     <!-- JS Bootstrap -->
 
