--- a/index.html
+++ b/index.html
@@ -425,8 +425,13 @@ Buscamos atender a todos os estilos com peças básicas, tendências da estaçã
                     <!-- Foto 1 -->
                      <article class="col-lg-4 col-md-6 portfolio-item filter-Novidades">
 
-                        Produto 1
+                        Produto 1 = Novidades da Semana
 
+                     </article>
+
+                     <article class="col-lg-4 col-md-6 portfolio-item filter-desconto">
+
+                        Produto 2 = Peças com Desconto
                      </article>
 
                 </div>
