--- a/index.html
+++ b/index.html
@@ -402,8 +402,7 @@
                     <h2> Nossas Roupas </h2>
 
                     <p> Minha loja é online e vende todos os tipos de roupas para todos os públicos. O catálogo é organizado por categorias como roupas femininas, masculinas, infantis, fitness, plus size, moda praia, íntima e acessórios. Também oferecemos peças separadas por ocasiões: casual, trabalho, festa, esportiva e conforto para casa.
-
-Buscamos atender a todos os estilos com peças básicas, tendências da estação e looks completos. As fotos são feitas com modelos diversos e as descrições incluem informações úteis como tecido, caimento e ocasiões ideais para o uso. </p>
+Buscamos atender a todos os estilos com peças básicas, tendências da estação e looks completos. As fotos são feitas com modelos diversos e as descrições incluem informações úteis como tecido, caimento e ocasiões ideais para o uso.  </p>
 
                 </div>
 
@@ -432,6 +431,11 @@ Buscamos atender a todos os estilos com peças básicas, tendências da estaçã
                      <article class="col-lg-4 col-md-6 portfolio-item filter-desconto">
 
                         Produto 2 = Peças com Desconto
+                     </article>
+
+                     <article class="col-lg-4 col-md-6 portfolio-item filter-desconto">
+
+                        Produto 3 = Mais Vendidos
                      </article>
 
                 </div>
